--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,7 @@
   <title>写真</title>
 </html>
 <body>
+  <p>写真は次の通り</p>
   <img src='photo.jpg' alt='教室で撮った写真'
        style='width:600px;'>
 </body>
