--- a/photo.html
+++ b/photo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <title>写真</title>
-</html>
+  <head>
+    <title>写真</title>
 <body>
   <p>写真は次の通り</p>
   <img src='photo.jpg' alt='教室で撮った写真'
