--- a/table.html
+++ b/table.html
@@ -10,9 +10,7 @@
 
 <body>
     <table>
-        <hr>
-        <table boder="5">
-        <caption>月ごとの最高気温</caption>
+        <caption>月ごとの最高気温<br></caption>
         <tbody>
         <tr><th>月</th><th>最高気温</th></tr>
         <tr><td>1月</td><td>10</td></tr>
