--- a/box.html
+++ b/box.html
@@ -3,6 +3,7 @@
     <head>
         <title>Document</title>
         <style>
+             *{ margin: 0px; padding: 0px;}
             #A {
                 margin: -8px;
                 width: 200px;
